...
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="0.01"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileButtonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="7"
            android:gravity="center"
            tools:context=".ui.profile.ProfileFragment"
            tools:listitem="@layout/profile_button_item" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:focusable="true"
...
