...
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/type_in_your_password_to_confirm_account_deletion"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/deleteAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/confirm_button" />
    </LinearLayout>
...
