...
    <string name="app_name">Allergen Detector</string>
    <string name="title_lists">Lists</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name_default_placeholder">Default Profile Name Placeholder</string>
    <string name="profile_button_allergens">Allergens</string>
    <string name="profile_button_settings">Settings</string>
    <string name="profile_button_statistics">Statistics</string>
    <string name="placeholder">Placeholder</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="edit_allergen">Edit Allergen</string>
    <string name="remove_allergen">Remove Allergen</string>
    <string name="allergen_severity">Allergen severity</string>
...
    <string name="dark_mode_switch">Dark mode</string>
    <string name="title_settings">Settings</string>
    <string name="change_avatar_button">Change Avatar</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_language_button">Change Language</string>
    <string name="feedback_button">Feedback</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="cancel_button">Cancel</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="choose_from_gallery">Choose from Gallery…</string>
    <string name="title_product">Add Product</string>
...
